name:                hkredmine
version:             0.1.0.0
synopsis:            A Redmine CLI Client
-- description:
homepage:            http://bugs.sleepanarchy.com
license:             GPL-3
license-file:        LICENSE
author:              Pavan Rikhi
maintainer:          pavan@sleepanarchy.com
copyright:           2014
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hkredmine
  main-is:             Main.hs
  other-modules:       Main.Actions,
                       Main.CLI,
                       Main.Utils

  build-depends:       base >=4.7 && <4.8,
                       aeson,
                       hkredmine,
                       transformers,
                       directory,
                       cmdargs,
                       time,
                       strict,
                       bytestring,
                       ConfigFile,
                       mtl,
                       MissingH

  ghc-options:         -Wall
  hs-source-dirs:      bin
  default-language:    Haskell2010

library
  exposed-modules:     Web.HTTP.Redmine
  other-modules:       Web.HTTP.Redmine.Client,
                       Web.HTTP.Redmine.Format,
                       Web.HTTP.Redmine.FormatTable,
                       Web.HTTP.Redmine.Types
  build-depends:       base >=4.7 && <4.8,
                       http-conduit,
                       http-client,
                       http-types,
                       aeson,
                       bytestring,
                       lifted-base,
                       transformers,
                       monad-logger,
                       resourcet,
                       either,
                       mtl,
                       text,
                       tls,
                       pretty,
                       safe
  hs-source-dirs:      src
  default-language:    Haskell2010
